--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.datasource.initialization-mode=embedded
 com.pjsdev.brewery.beer-inventory-service-host=http://localhost:8082
+spring.cache.jcache.config=classpath:ehcache.xml
