--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.initialization-mode=embedded
 com.pjsdev.brewery.beer-inventory-service-host=http://localhost:8082
 spring.cache.jcache.config=classpath:ehcache.xml
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=mysql
+spring.h2.console.enabled=true
