--- a/src/main/resources/application-localmariadb.properties
+++ b/src/main/resources/application-localmariadb.properties
@@ -3,4 +3,4 @@ spring.datasource.password=password
 spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/beerservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
