--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ com.pjsdev.brewery.beer-inventory-service-host=http://localhost:8082
 spring.cache.jcache.config=classpath:ehcache.xml
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=mysql
 spring.h2.console.enabled=true
+
+spring.artemis.broker-url=tcp://192.168.1.101:61616
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
