Amend logging levels

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.h2.console.enabled=true
 spring.artemis.broker-url=tcp://192.168.1.101:61616
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+
+logging.level.com.pjsdev.msscbeerservice=debug
